--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<meta charset="utf-8">
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
-		<meta name="format-detection" content="telephone=no" />
-		<meta name="format-detection" content="email=no" />
-		<meta name="flexible" content="initial-dpr=2" />
-		<title>维修管理</title>
+	<meta charset="utf-8">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="format-detection" content="email=no" />
+	<meta name="flexible" content="initial-dpr=2" />
+	<meta name="screen-orientation" content="portrait"/>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="full-screen" content="yes">
+    <meta name="x5-fullscreen" content="true">
+	<title>维修管理</title>
 	</head>
-
 	<body>
-		<div id="app"></div>
+        <div id="app"></div> 		
 		<!-- built files will be auto injected -->
 	</body>
 
