--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
 	<title>维修管理</title>
 	</head>
 	<body>
-        <div id="app"></div> 		
+        <div id="app"></div>
 		<!-- built files will be auto injected -->
 	</body>
 
 </html>
+<style>
+  html{
+    height: 100%;
+  }
+  body{
+    background:#eff3f6;
+    height: 100%;
+  }
+  ::-webkit-input-placeholder{
+    color: #bebebe;
+  }
+</style>
 
