--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
 	<title>维修管理</title>
 	</head>
 	<body>
-        <div id="app"></div>
+        <div id="app" v-cloak></div>
 		<!-- built files will be auto injected -->
 	</body>
 
 </html>
 <style>
+[v-cloak] {
+  display: none;
+}
   html{
     height: 100%;
   }
   body{
-    background:#eff3f6;
+    background-color:#eff3f6;
     height: 100%;
   }
   ::-webkit-input-placeholder{
